--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -500,7 +500,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 
 # Compound
 
-Allows you to build a form group using multiple separate inputs with a single 
+Allows you to build a form group using multiple separate inputs with a single
 common label, and render those in a screenreader-friendly way.
 
 https://jadu.github.io/pulsar/form-helpers/compound
@@ -2183,6 +2183,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 {% spaceless %}
     <div
         class="repeater"
+        data-repeater
         data-repeater-add-new-group-text="{{ options['add-new-group-text']|default('Add') }}"
         data-repeater-add-another-group-text="{{ options['add-another-group-text']|default('Add another') }}"
         data-repeater-max-entries="{{ options['max-entries']|default(false) }}"
