--- a/emails/templates/xfp-detail.html
+++ b/emails/templates/xfp-detail.html
@@ -18,6 +18,8 @@
     font-size: 18px !important; }
   h3 {
     font-size: 16px !important; }
+  table.content-wrap__table {
+    table-layout: auto !important;}
   .container {
     padding: 0 !important;
     width: 100% !important; }
@@ -30,6 +32,8 @@
   .branding-block {
     border-top-left-radius: 10px !important;
     border-top-right-radius: 10px !important; } }
+a.btn-primary {
+  text-decoration: none; }
 </style>
 </head>
 
@@ -50,15 +54,15 @@
                     </tr>
                     <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
                         <td class="content-wrap" style="margin: 0; box-sizing: border-box; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; vertical-align: top; padding: 20px; border-left: 1px solid #e9e9e9; border-bottom: 1px solid #e9e9e9; border-right: 1px solid #e9e9e9; border-bottom-right-radius: 20px; background-color: #fff;">
-                            <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
+                            <table class="content-wrap__table" width="100%" cellpadding="0" cellspacing="0" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; table-layout: fixed;">
 
                                 <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
-                                    <td class="content-block" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 0 0 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all; word-break: break-word;">
+                                    <td class="content-block" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 0 0 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; mso-line-height-rule: exactly; line-height:150%;">
                                         A new support case has been submitted to your group.
                                     </td>
                                 </tr>
                                 <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
-                                    <td class="content-block detail-block" style="margin: 0; box-sizing: border-box; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; vertical-align: top; padding: 10px; border-bottom-right-radius: 10px; background-color: #f6f6f6; border: 1px solid #e9e9e9; border-top-left-radius: 10px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all; word-break: break-word;">
+                                    <td class="content-block detail-block" style="margin: 0; box-sizing: border-box; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; vertical-align: top; padding: 10px; border-bottom-right-radius: 10px; background-color: #f6f6f6; border: 1px solid #e9e9e9; border-top-left-radius: 10px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; mso-line-height-rule: exactly; line-height:150%;">
                                         <p style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; font-weight: normal; margin-bottom: 5px;"><strong style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">Customer:</strong> Admin McAdminson</p>
                                         <p style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; font-weight: normal; margin-bottom: 5px;"><strong style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">Organisation:</strong> Jadu City Council</p>
                                         <hr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; border: 0; border-bottom: 1px solid #ccc; padding: 5px 0;">
@@ -67,7 +71,7 @@
                                     </td>
                                 </tr>
                                 <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
-                                    <td class="content-block" itemprop="handler" itemscope="" itemtype="http://schema.org/HttpActionHandler" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 20px 0; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all; word-break: break-word;">
+                                    <td class="content-block" itemprop="handler" itemscope="" itemtype="http://schema.org/HttpActionHandler" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 20px 0; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; mso-line-height-rule: exactly; line-height:150%;">
                                         <a href="http://jadu.continuum/path/to/action" class="btn-primary" itemprop="url" style="margin: 0; box-sizing: border-box; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #fff; text-decoration: none; text-transform: capitalize; border: solid #348eda; border-width: 10px 20px; margin-top: 10px; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 5px; line-height: 2em; background-color: #6b9c2f; border-color: #6b9c2f;">View Case</a>
                                     </td>
                                 </tr>
