consistently naming things "repeater"

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -21,7 +21,7 @@
 {% set tab_time %}{% include 'lexicon/forms/time.html.twig' %}{% endset %}
 {% set tab_toggleswitch %}{% include 'lexicon/forms/toggle-switch.html.twig' %}{% endset %}
 {% set tab_jstree %}{% include 'lexicon/forms/jstree.html.twig' %}{% endset %}
-{% set tab_repeatable %}{% include 'lexicon/forms/repeatable.html.twig' %}{% endset %}
+{% set tab_repeater %}{% include 'lexicon/forms/repeater.html.twig' %}{% endset %}
 
 {%
     set tabs_content = [
@@ -126,10 +126,9 @@
           "src"   : tab_toggleswitch
         },
         {
-          "id"    : "repeatable",
-          "label" : "Repeatable",
-          "src"   : tab_repeatable,
-          "active": true
+          "id"    : "repeater",
+          "label" : "Repeater",
+          "src"   : tab_repeater
         }
     ]
 %}
