--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2175,7 +2175,51 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 {% endspaceless %}
 {% endmacro %}
 
-{% macro repeatable_start(options) %}
+{# -----------------------------------------------------------------------------
+
+# Toggle Switch
+
+Generates a checkbox input field with Toggle styling.
+
+## Example usage
+
+```twig
+{{
+    form.toggle_switch({
+        'label': 'Flip the switch'
+    })
+}}
+```
+
+## Options applied to parent wrapper
+
+Option        | Type   | Description
+------------- | ------ | -------------------------------------------------------
+class         | string | A space separated list of class names
+error         | string | Text to explain an error/validation condition. Also adds error state styling
+guidance      | string | Text to be displayed in a popover, adds a (?) icon after the input
+help          | string | Additional guidance information to be displayed next to the input
+label         | string | Text for the `<label>` companion element
+required      | bool   | Visually indicates that the field must be completed
+show-label    | bool   | Control visibility of the `<label>` element without affecting layout (default: true)
+
+## Options applied to input
+
+Option        | Type   | Description
+------------- | ------ | -------------------------------------------------------
+checked       | bool   | Whether the input is checked
+form          | string | Specify one or more forms this label belongs to
+id            | string | A unique identifier, will also be applied as the label's `for` attribute
+indeterminate | bool   | Shows the checkbox as [-], overrides the value of `checked`
+name          | string | The name of this control
+required      | bool   | Adds `required` and `aria-required="true"` attributes
+value         | string | Specifies the value of the input
+data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
+
+*Any other options not listed here will be applied to the input.
+
+#}
+{% macro repeater_start(options) %}
 {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 {% import _self as form %}
@@ -2221,7 +2265,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 {% endspaceless %}
 {% endmacro %}
 
-{% macro repeatable_end() %}
+{% macro repeater_end() %}
 {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 {% spaceless %}
                             </div>
