removing legacy table classes

--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2256,7 +2256,7 @@ add-another-group-text  | string | The text content of the add another new entry
                     <tbody class="repeater__preview-data" data-repeater-preview-root>
                         <tr class="repeater__empty-placeholder" data-repeater-preview-placeholder>
                             <td colspan="{{ headingLength }}" class="muted">{{ options.empty }}</td>
-                            <td class="table__td table__td--align-right table-row__actions"></td>
+                            <td class="table__td--align-right table-row__actions"></td>
                         </tr>
                     </tbody>
                     <tfoot>
