Change Datatables Select/Deselect Btn Styles
An update of the datatables package caused a change in the markup of the dt-buttons. It used to be links now it is buttons. This is the reason of those new styles.

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -47,14 +47,21 @@
 // scss-lint:enable SelectorFormat
 
 .dt-buttons {
+    border-right: 1px solid #ccc;
     float: left;
     margin-top: 11px;
     margin-right: 10px;
-    border-right: 1px solid #ccc;
+    padding-right: 6px;
 }
 
 .dt-button {
-    margin-right: 10px;
+    background-color: transparent;
+    border: 0;
+    color: color(jadu-blue, dark);
+
+    &:hover {
+        color: color(jadu-blue, darkest);
+    }
 }
 
 .datatable {
