Make sure legends are consistently styled with underline
The descendent selector was breaking legend styling in stuations where fieldsets were contained in another element like a `<section>`.

Fixes #712

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -7,7 +7,7 @@ fieldset {
 .form {
     background-color: color(white);
 
-    > fieldset {
+    fieldset {
         padding: 22px 0;
 
         legend {
