Make Example Styles Lexicon Specific
With the use of a new class prefix now there is a separation of the lexicon styles from pulsar.

--- a/views/lexicon/html/labels.html.twig
+++ b/views/lexicon/html/labels.html.twig
@@ -4,7 +4,7 @@
 
     <h2>Labels</h2>
 
-    <table class="example table">
+    <table class="lex-table">
         <thead>
             <tr>
                 <td></td>
