--- a/views/lexicon/tabs/flash.html.twig
+++ b/views/lexicon/tabs/flash.html.twig
@@ -5,7 +5,7 @@
 
 {% block tab_content %}
 
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'This is the default message style with <a href="#">an example link</a>',
@@ -13,7 +13,7 @@
 			})
 		}}
 	</div>
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'This is the success style with <a href="#">an example link</a>',
@@ -22,7 +22,7 @@
 			})
 		}}
 	</div>
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'This is the warning style with <a href="#">an example link</a>',
@@ -31,7 +31,7 @@
 			})
 		}}
 	</div>
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'This is the error style with <a href="#">an example link</a>',
@@ -40,7 +40,7 @@
 			})
 		}}
 	</div>
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'This is the info style with <a href="#">an example link</a>',
@@ -49,7 +49,7 @@
 			})
 		}}
 	</div>
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'You can dismiss this message',
@@ -60,7 +60,7 @@
 		}}
 	</div>
 
-	<div class="example">
+	<div class="lexicon">
 		{{
 			flash.message({
 				'message': 'You can’t dismiss this one',
