--- a/views/lexicon/tabs/popovers.html.twig
+++ b/views/lexicon/tabs/popovers.html.twig
@@ -5,7 +5,7 @@
 
 {% block tab_content %}
 
-      <div class="example-popovers">
+      <div class="lex-popovers">
         <div class="popover top">
           <div class="arrow"></div>
           <h3 class="popover-title">Popover top</h3>
