--- a/views/lexicon/utilities/responsive.html.twig
+++ b/views/lexicon/utilities/responsive.html.twig
@@ -2,7 +2,7 @@
 
 {% block tab_content %}
 
-<div class="example wrapper">
+<div class="lex-wrapper">
 
     <div class="item u-visible-on-phone">
         1. Visible on mobile, hidden on tablet and desktop
