--- a/stylesheets/_component.toggle-switch.scss
+++ b/stylesheets/_component.toggle-switch.scss
@@ -101,14 +101,15 @@
 }
 
 // State class overrides to make sure internal 'icon' doesn't inherit the state
-// colour styling as they look terrible and don't meet AA
+// colour styling as they look terrible and don't meet AA.
+// .double.chained control__label is required to override inherited styles
 .has-changed,
 .has-success,
 .has-warning,
 .has-info,
 .has-error,
 .has-danger {
-    .toggle-switch-label.control__label {
+    .toggle-switch-label.control__label.control__label {
         color: color(white);
     }
 }
@@ -116,4 +117,3 @@
 .toggle-switch.is-disabled + .toggle-switch-label {
     opacity: .5;
 }
-
