--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -81,7 +81,7 @@
             'label': html.icon('time') ~ ' 2',
             'class': 'dropdown--medium',
             'items': ['
-                <h2 class="dropdown__title">Schedules' ~
+                <h2 class="dropdown__title"><span>Schedules</span>' ~
                 html.button({
                     'label': html.icon('plus'),
                     'data-toggle': 'modal',
