Filter Validation Improvements

--- a/views/lexicon/patterns/filters/load-filter.html.twig
+++ b/views/lexicon/patterns/filters/load-filter.html.twig
@@ -64,21 +64,21 @@
                 {{
                     form.text({
                         'label': 'Text field example',
-                        'id': 'foo'
+                        'id': 'foo3'
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added from',
-                        'id': 'addedFrom',
+                        'id': 'addedFrom3',
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added to',
-                        'id': 'addedTo',
+                        'id': 'addedTo3',
                         'value': '04/07/2017'
                     })
                 }}
@@ -86,7 +86,7 @@
                 {{
                     form.checkbox({
                         'label': 'In stock',
-                        'id': 'inStock',
+                        'id': 'inStock3',
                         'checked': true
                     })
                 }}
