--- a/views/lexicon/tables/sortable.html.twig
+++ b/views/lexicon/tables/sortable.html.twig
@@ -199,28 +199,28 @@
                     {{
                         form.text({
                             'label': 'Text field example',
-                            'id': 'foo'
+                            'id': 'foo2'
                         })
                     }}
 
                     {{
                         form.date({
                             'label': 'Added from',
-                            'id': 'addedFrom',
+                            'id': 'addedFrom2',
                         })
                     }}
 
                     {{
                         form.date({
                             'label': 'Added to',
-                            'id': 'addedTo'
+                            'id': 'addedTo2'
                         })
                     }}
 
                     {{
                         form.checkbox({
                             'label': 'In stock',
-                            'id': 'inStock'
+                            'id': 'inStock2'
                         })
                     }}
 
