--- a/views/lexicon/tabs/filters.html.twig
+++ b/views/lexicon/tabs/filters.html.twig
@@ -61,28 +61,28 @@
                 {{
                     form.text({
                         'label': 'Text field example',
-                        'id': 'foo'
+                        'id': 'foo1'
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added from',
-                        'id': 'addedFrom',
+                        'id': 'addedFrom1',
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added to',
-                        'id': 'addedTo'
+                        'id': 'addedTo1'
                     })
                 }}
 
                 {{
                     form.checkbox({
                         'label': 'In stock',
-                        'id': 'inStock'
+                        'id': 'inStock1'
                     })
                 }}
 
