--- a/views/lexicon/patterns/filters/create-filter.html.twig
+++ b/views/lexicon/patterns/filters/create-filter.html.twig
@@ -62,28 +62,28 @@
                 {{
                     form.text({
                         'label': 'Text field example',
-                        'id': 'foo'
+                        'id': 'foo4'
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added from',
-                        'id': 'addedFrom',
+                        'id': 'addedFrom4',
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added to',
-                        'id': 'addedTo'
+                        'id': 'addedTo4'
                     })
                 }}
 
                 {{
                     form.checkbox({
                         'label': 'In stock',
-                        'id': 'inStock'
+                        'id': 'inStock4'
                     })
                 }}
 
