Filter Validation Improvements

--- a/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
+++ b/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
@@ -11,7 +11,7 @@
 
 {{
     form.create({
-        'data-disable-ui': "true" 
+        'data-disable-ui': "true"
     })
 }}
 
@@ -20,7 +20,7 @@
     {{
         form.text({
             'label': 'Text input',
-            'id': 'inputText',
+            'id': 'inputText-tab-disabled',
             'name': 'inputText',
             'placeholder': 'Placeholder'
         })
