--- a/views/lexicon/patterns/masterswitch/masterswitch-disabled-form-wrapper.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-disabled-form-wrapper.html.twig
@@ -7,7 +7,7 @@
 }}
 
     <div class="masterswitch">
-    
+
         {{
             form.toggle_switch({
                 'class': 'masterswitch-control',
@@ -24,7 +24,7 @@
             {{
                 form.text({
                     'label': 'Text input',
-                    'id': 'inputText',
+                    'id': 'inputText-1',
                     'name': 'inputText',
                     'placeholder': 'Placeholder'
                 })
