--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled-form-wrapper.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled-form-wrapper.html.twig
@@ -25,7 +25,7 @@
             {{
                 form.text({
                     'label': 'Text input',
-                    'id': 'inputText',
+                    'id': 'inputText-2',
                     'name': 'inputText',
                     'placeholder': 'Placeholder'
                 })
