--- a/views/lexicon/patterns/masterswitch/masterswitch.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch.html.twig
@@ -15,7 +15,7 @@
         <hr />
 
         <section class="masterswitch-content is-disabled">
-	
+
 	    {{
                 form.create()
             }}
@@ -24,7 +24,7 @@
             {{
                 form.text({
                     'label': 'Text input',
-                    'id': 'inputText',
+                    'id': 'inputText-5',
                     'name': 'inputText',
                     'placeholder': 'Placeholder'
                 })
