--- a/views/playground/integrations/singlepoint_one.html.twig
+++ b/views/playground/integrations/singlepoint_one.html.twig
@@ -59,7 +59,7 @@
                                 form.text({
                                     'label': 'SinglePoint WSDL URL',
                                     'class': 'form__group--xlarge',
-                                    'id': 'inputText',
+                                    'id': 'inputText-singlepoint',
                                     'name': 'inputText',
                                     'placeholder': 'http://',
                                     'required': true,
