--- a/views/playground/integrations/singlepoint_three.html.twig
+++ b/views/playground/integrations/singlepoint_three.html.twig
@@ -87,7 +87,7 @@
                                 form.text({
                                     'label': 'SinglePoint WSDL URL',
                                     'class': 'form__group--xlarge',
-                                    'id': 'inputText',
+                                    'id': 'inputText-signlepoint-2',
                                     'name': 'inputText',
                                     'value': 'http://incorrect/url/example',
                                     'required': true,
