--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
@@ -26,7 +26,7 @@
             {{
                 form.text({
                     'label': 'Text input',
-                    'id': 'inputText',
+                    'id': 'inputText-3',
                     'name': 'inputText',
                     'placeholder': 'Placeholder'
                 })
