--- a/views/playground/xfp-received/tab.html.twig
+++ b/views/playground/xfp-received/tab.html.twig
@@ -68,7 +68,7 @@
 
         {{
             form.toggle_switch({
-                'id': 'optional-question',
+                'id': 'optional-question-tab2',
                 'label': 'Hide optional questions with no response',
                 'checked': true
             })
