add primary utlitlity class to save action

--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2276,7 +2276,7 @@ add-another-group-text  | string | The text content of the add another new entry
                                     html.button({
                                         'data-repeater-save-group': 'true',
                                         'label': 'Save',
-                                        'class': 'repeater__save-group',
+                                        'class': 'btn--primary repeater__save-group',
                                         'type': 'button'
                                     })
                                 }}
