Stop no-results table message from using bold type
When no-results message is in the `<thead>` instead of the `<tbody>` it inherits the regular font variant.

This change ensures that the normal light variant is used.

Double chained selector is required to override the use of element selectors to style the `thead td`.

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -56,8 +56,13 @@
     }
 
     .no-results {
-      padding: 2em 0;
-      text-align: center;
+        padding: 2em 0;
+        text-align: center;
+
+        // Stop no-results from inheriting bold text from th
+        &.no-results {
+            font-family: $font-family-light;
+        }
     }
 
     th {
