Add class dropdown_title_btn at Reports Scheduling

--- a/views/lexicon/patterns/reporting/building.html.twig
+++ b/views/lexicon/patterns/reporting/building.html.twig
@@ -58,6 +58,7 @@
             'items': ['
                 <h2 class="dropdown__title">No Schedules' ~
                 html.button({
+                    'class': 'dropdown__title__btn',
                     'label': html.icon('plus'),
                     'data-toggle': 'modal',
                     'href': '#schedule-add',
@@ -83,6 +84,7 @@
             'items': ['
                 <h2 class="dropdown__title">Schedules' ~
                 html.button({
+                    'class': 'dropdown__title__btn',
                     'label': html.icon('plus'),
                     'data-toggle': 'modal',
                     'href': '#schedule-add',
