Add Variables for Margins

--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -99,6 +99,14 @@ $dropdown-font-size:                  $font-size-medium !default;
 //  Components
 // -----------------------------------------------------------------------------
 
+$margin-base:                        10px !default;
+$margin-base-vertical:               6px !default;
+$margin-base-horizontal:             12px !default;
+$margin-large-vertical:              10px !default;
+$margin-large-horizontal:            16px !default;
+$margin-small-vertical:              5px !default;
+$margin-small-horizontal:            10px !default;
+
 $padding-base:                        10px !default;
 $padding-base-vertical:               6px !default;
 $padding-base-horizontal:             12px !default;
