--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -21,7 +21,7 @@
 
         p,
         ul {
-            margin-bottom: $padding-base-vertical;
+            margin-bottom: $margin-base-vertical;
 
             &:last-child {
                 margin-bottom: 0;
