--- a/views/pulsar/layouts/legacy.html.twig
+++ b/views/pulsar/layouts/legacy.html.twig
@@ -43,6 +43,8 @@
 {% endif %}
     ></script>
 
+    <script src="{{ base_path ~ 'dist/js/lexicon-bundle.js' }}" type="text/javascript"></script>
+
     {% block pageStyle %}{% endblock %}
 
 </head>
