Table detail - lexicon pages and nav

--- a/views/lexicon/base.html.twig
+++ b/views/lexicon/base.html.twig
@@ -96,6 +96,10 @@
                     "4.1.6": {
                         "label": "Settings",
                         "href": "/app/app.php/lexicon/patterns/settings/"
+                    },
+                    "4.1.7": {
+                        "label": "Table Detail",
+                        "href": "/app/app.php/lexicon/patterns/table-detail/"
                     }
                 }
             }
