--- a/stylesheets/_component.table-detail.scss
+++ b/stylesheets/_component.table-detail.scss
@@ -1,35 +1,37 @@
 .table-detail {
+    -webkit-transform: translateX(100%);
     background: color(white);
     border-left: 1px solid $modal-header-border-color;
+    bottom: 0;
+    display: table-cell;
     height: 100%;
     position: absolute;
-    right: -600px;
+    right: 0;
     top: 0;
-    transform: translate3d(-100%, 0, 0);
-    transition: all .2s;
+    transform: translateX(100%);
+    transition: transform .2s ease-out;
     visibility: visible;
     width: 300px;
+    will-change: transform;
     z-index: $zindex-modal;
 
     @include respond-min($screen-xsmall) {
-    	right: -800px;
-    	width: 400px;
+        width: 400px;
     }
 
     @include respond-min($screen-smaller) {
-    	right: -1000px;
-    	width: 500px;
+        width: 500px;
     }
 
     @include respond-min($screen-tablet) {
-    	right: -1200px;
-    	width: 600px;
+        width: 600px;
     }
 
     &.table-detail--open {
-	    right: 0;
-	    transform: translate3d(0, 0, 0);
-	}
+        -webkit-transform: none;
+        transform: none;
+        transition: transform .2s;
+    }
 }
 
 .table-detail__header {
@@ -61,9 +63,9 @@
     z-index: ($zindex-modal - 10);
 
     &.in {
-		height: 100%;
-		opacity: .5;
-		transition: opacity .2s;
-		width: 100%;
+        height: 100%;
+        opacity: .5;
+        transition: opacity .2s;
+        width: 100%;
     }
 }
