--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -49,13 +49,13 @@
 a.dt-button {
     border-right: 1px solid color(border);
     margin-right: $margin-base-vertical;
+    padding-right: $margin-base-vertical;
 }
 
 .dt-buttons > a,
 .dt-buttons > button {
     float: left;
     margin-top: $margin-large-vertical;
-    padding: 0 $padding-base-horizontal;
 }
 
 .dt-buttons > button {
@@ -64,6 +64,7 @@ a.dt-button {
     border-right: 1px solid color(border);
     color: color(jadu-blue, dark);
     margin-right: $margin-base-vertical;
+    padding: 0 $padding-base-horizontal;
 
     &:hover {
         color: color(jadu-blue, darkest);
