using newer margin var

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -401,7 +401,7 @@
 
 .content-actions {
     float: right;
-    margin: 0 0 ($margin-base-vertical * 2) $padding-large-horizontal;
+    margin: 0 0 ($margin-base-vertical * 2) $margin-large-horizontal;
 }
 
 .content-actions__pages,
