--- a/stylesheets/_component.progress-lists.scss
+++ b/stylesheets/_component.progress-lists.scss
@@ -15,7 +15,7 @@
     box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, .1);
     color: color(black);
     display: block;
-    padding: 1.75em 0 .75em .75em;
+    padding: .7em 0 .5em .5em;
     text-decoration: none;
     vertical-align: top;
 
@@ -28,12 +28,12 @@
 
     // scss-lint:disable DeclarationOrder
     &:not(:last-child) {
-        @include css-arrow(23px, bottom, $progress-bg);
+        @include css-arrow(10px, bottom, $progress-bg);
 
         &::before {
             border-top-color: color(white);
-            border-width: 27px;
-            margin-left: -27px;
+            border-width: 15px;
+            margin-left: -15px;
         }
 
         @include respond-min($screen-tablet) {
