Removed some left over examples of flash colours (not removed) from the lexicon colours tab

--- a/views/lexicon/tabs/colours.html.twig
+++ b/views/lexicon/tabs/colours.html.twig
@@ -168,8 +168,7 @@
         set states_success = {
             "success-base": "success, base",
             "success-light": "success, light",
-            "success-dark": "success, dark",
-            "success-flash": "success, flash"
+            "success-dark": "success, dark"
         }
     %}
 
@@ -187,8 +186,7 @@
         set states_warning = {
             "warning-base": "warning, base",
             "warning-light": "warning, light",
-            "warning-dark": "warning, dark",
-            "warning-flash": "warning, flash"
+            "warning-dark": "warning, dark"
         }
     %}
 
@@ -206,8 +204,7 @@
         set states_danger = {
             "danger-base": "danger, base",
             "danger-light": "danger, light",
-            "danger-dark": "danger, dark",
-            "danger-flash": "danger, flash"
+            "danger-dark": "danger, dark"
         }
     %}
 
@@ -225,8 +222,7 @@
         set states_info = {
             "info-base": "info, base",
             "info-light": "info, light",
-            "info-dark": "info, dark",
-            "info-flash": "info, flash"
+            "info-dark": "info, dark"
         }
     %}
 
@@ -244,8 +240,7 @@
         set states_inverse = {
             "inverse-base": "inverse, base",
             "inverse-light": "inverse, light",
-            "inverse-dark": "inverse, dark",
-            "inverse-flash": "inverse, flash"
+            "inverse-dark": "inverse, dark"
         }
     %}
 
