--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -82,7 +82,7 @@
             'label': html.icon('time') ~ ' 2',
             'class': 'dropdown--medium',
             'items': ['
-                <h2 class="dropdown__title"><span>Schedules</span>' ~
+                <h2 class="dropdown__title"><span class="dropdown__title-text">Schedules</span>' ~
                 html.button({
                     'class': 'dropdown__title__btn',
                     'label': html.icon('plus'),
