Add dropdown title text class to the structure

--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -56,7 +56,7 @@
             'label': html.icon('time') ~ ' 0',
             'class': 'dropdown--medium hide',
             'items': ['
-                <h2 class="dropdown__title">No Schedules' ~
+                <h2 class="dropdown__title"><span class="dropdown__title__text">No Schedules</span>' ~
                 html.button({
                     'class': 'dropdown__title__btn',
                     'label': html.icon('plus'),
@@ -82,7 +82,7 @@
             'label': html.icon('time') ~ ' 2',
             'class': 'dropdown--medium',
             'items': ['
-                <h2 class="dropdown__title"><span class="dropdown__title-text">Schedules</span>' ~
+                <h2 class="dropdown__title"><span class="dropdown__title__text">Schedules</span>' ~
                 html.button({
                     'class': 'dropdown__title__btn',
                     'label': html.icon('plus'),
